Zinc/ANTLR/ZincParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Zinc.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class ZincParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, ID=11, NULL=12, MARKER=13, REMOVE=14, NA=15, TRUE=16, FALSE=17, 
		COORD=18, XSTR=19, SYMBOL=20, REF=21, STR=22, URI=23, NUMBER=24, DATE=25, 
		TIME=26, DATETIME=27, WS=28;
	public const int
		RULE_grid = 0, RULE_gridMeta = 1, RULE_ver = 2, RULE_tagsNoComma = 3, 
		RULE_tagsCommaOk = 4, RULE_tag = 5, RULE_tagMarker = 6, RULE_tagPair = 7, 
		RULE_cols = 8, RULE_col = 9, RULE_row = 10, RULE_val = 11, RULE_list = 12, 
		RULE_dict = 13, RULE_nestedgrid = 14, RULE_scalar = 15, RULE_bool = 16;
	public static readonly string[] ruleNames = {
		"grid", "gridMeta", "ver", "tagsNoComma", "tagsCommaOk", "tag", "tagMarker", 
		"tagPair", "cols", "col", "row", "val", "list", "dict", "nestedgrid", 
		"scalar", "bool"
	};

	private static readonly string[] _LiteralNames = {
		null, "'\n'", "'ver:'", "','", "':'", "'['", "']'", "'{'", "'}'", "'<<'", 
		"'>>'", null, "'N'", "'M'", "'R'", "'NA'", "'T'", "'F'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, "ID", 
		"NULL", "MARKER", "REMOVE", "NA", "TRUE", "FALSE", "COORD", "XSTR", "SYMBOL", 
		"REF", "STR", "URI", "NUMBER", "DATE", "TIME", "DATETIME", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Zinc.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ZincParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ZincParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ZincParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class GridContext : ParserRuleContext {
		public GridMetaContext gridMeta() {
			return GetRuleContext<GridMetaContext>(0);
		}
		public ColsContext cols() {
			return GetRuleContext<ColsContext>(0);
		}
		public RowContext[] row() {
			return GetRuleContexts<RowContext>();
		}
		public RowContext row(int i) {
			return GetRuleContext<RowContext>(i);
		}
		public GridContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_grid; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.EnterGrid(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.ExitGrid(this);
		}
	}

	[RuleVersion(0)]
	public GridContext grid() {
		GridContext _localctx = new GridContext(Context, State);
		EnterRule(_localctx, 0, RULE_grid);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34; gridMeta();
			State = 35; cols();
			State = 39;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__6) | (1L << T__8) | (1L << NULL) | (1L << MARKER) | (1L << REMOVE) | (1L << NA) | (1L << TRUE) | (1L << FALSE) | (1L << COORD) | (1L << XSTR) | (1L << SYMBOL) | (1L << REF) | (1L << STR) | (1L << URI) | (1L << NUMBER) | (1L << DATE) | (1L << TIME) | (1L << DATETIME))) != 0)) {
				{
				{
				State = 36; row();
				}
				}
				State = 41;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GridMetaContext : ParserRuleContext {
		public VerContext ver() {
			return GetRuleContext<VerContext>(0);
		}
		public TagsNoCommaContext tagsNoComma() {
			return GetRuleContext<TagsNoCommaContext>(0);
		}
		public GridMetaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gridMeta; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.EnterGridMeta(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.ExitGridMeta(this);
		}
	}

	[RuleVersion(0)]
	public GridMetaContext gridMeta() {
		GridMetaContext _localctx = new GridMetaContext(Context, State);
		EnterRule(_localctx, 2, RULE_gridMeta);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42; ver();
			State = 43; tagsNoComma();
			State = 44; Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VerContext : ParserRuleContext {
		public ITerminalNode STR() { return GetToken(ZincParser.STR, 0); }
		public VerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ver; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.EnterVer(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.ExitVer(this);
		}
	}

	[RuleVersion(0)]
	public VerContext ver() {
		VerContext _localctx = new VerContext(Context, State);
		EnterRule(_localctx, 4, RULE_ver);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 46; Match(T__1);
			State = 47; Match(STR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TagsNoCommaContext : ParserRuleContext {
		public TagContext[] tag() {
			return GetRuleContexts<TagContext>();
		}
		public TagContext tag(int i) {
			return GetRuleContext<TagContext>(i);
		}
		public TagsNoCommaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tagsNoComma; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.EnterTagsNoComma(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.ExitTagsNoComma(this);
		}
	}

	[RuleVersion(0)]
	public TagsNoCommaContext tagsNoComma() {
		TagsNoCommaContext _localctx = new TagsNoCommaContext(Context, State);
		EnterRule(_localctx, 6, RULE_tagsNoComma);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ID) {
				{
				{
				State = 49; tag();
				}
				}
				State = 54;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TagsCommaOkContext : ParserRuleContext {
		public TagContext[] tag() {
			return GetRuleContexts<TagContext>();
		}
		public TagContext tag(int i) {
			return GetRuleContext<TagContext>(i);
		}
		public TagsCommaOkContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tagsCommaOk; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.EnterTagsCommaOk(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.ExitTagsCommaOk(this);
		}
	}

	[RuleVersion(0)]
	public TagsCommaOkContext tagsCommaOk() {
		TagsCommaOkContext _localctx = new TagsCommaOkContext(Context, State);
		EnterRule(_localctx, 8, RULE_tagsCommaOk);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ID) {
				{
				{
				State = 55; tag();
				State = 57;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__2) {
					{
					State = 56; Match(T__2);
					}
				}

				}
				}
				State = 63;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TagContext : ParserRuleContext {
		public TagMarkerContext tagMarker() {
			return GetRuleContext<TagMarkerContext>(0);
		}
		public TagPairContext tagPair() {
			return GetRuleContext<TagPairContext>(0);
		}
		public TagContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tag; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.EnterTag(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.ExitTag(this);
		}
	}

	[RuleVersion(0)]
	public TagContext tag() {
		TagContext _localctx = new TagContext(Context, State);
		EnterRule(_localctx, 10, RULE_tag);
		try {
			State = 66;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 64; tagMarker();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 65; tagPair();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TagMarkerContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(ZincParser.ID, 0); }
		public TagMarkerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tagMarker; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.EnterTagMarker(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.ExitTagMarker(this);
		}
	}

	[RuleVersion(0)]
	public TagMarkerContext tagMarker() {
		TagMarkerContext _localctx = new TagMarkerContext(Context, State);
		EnterRule(_localctx, 12, RULE_tagMarker);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TagPairContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(ZincParser.ID, 0); }
		public ValContext val() {
			return GetRuleContext<ValContext>(0);
		}
		public TagPairContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tagPair; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.EnterTagPair(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.ExitTagPair(this);
		}
	}

	[RuleVersion(0)]
	public TagPairContext tagPair() {
		TagPairContext _localctx = new TagPairContext(Context, State);
		EnterRule(_localctx, 14, RULE_tagPair);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70; Match(ID);
			State = 71; Match(T__3);
			State = 72; val();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ColsContext : ParserRuleContext {
		public ColContext[] col() {
			return GetRuleContexts<ColContext>();
		}
		public ColContext col(int i) {
			return GetRuleContext<ColContext>(i);
		}
		public ColsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cols; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.EnterCols(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.ExitCols(this);
		}
	}

	[RuleVersion(0)]
	public ColsContext cols() {
		ColsContext _localctx = new ColsContext(Context, State);
		EnterRule(_localctx, 16, RULE_cols);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74; col();
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__2) {
				{
				{
				State = 75; Match(T__2);
				State = 76; col();
				}
				}
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 82; Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ColContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(ZincParser.ID, 0); }
		public TagsNoCommaContext tagsNoComma() {
			return GetRuleContext<TagsNoCommaContext>(0);
		}
		public ColContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_col; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.EnterCol(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.ExitCol(this);
		}
	}

	[RuleVersion(0)]
	public ColContext col() {
		ColContext _localctx = new ColContext(Context, State);
		EnterRule(_localctx, 18, RULE_col);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84; Match(ID);
			State = 85; tagsNoComma();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RowContext : ParserRuleContext {
		public ITerminalNode NULL() { return GetToken(ZincParser.NULL, 0); }
		public ValContext[] val() {
			return GetRuleContexts<ValContext>();
		}
		public ValContext val(int i) {
			return GetRuleContext<ValContext>(i);
		}
		public RowContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_row; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.EnterRow(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.ExitRow(this);
		}
	}

	[RuleVersion(0)]
	public RowContext row() {
		RowContext _localctx = new RowContext(Context, State);
		EnterRule(_localctx, 20, RULE_row);
		int _la;
		try {
			State = 101;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 87; Match(NULL);
				State = 88; Match(T__0);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 89; val();
				State = 96;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__2) {
					{
					{
					State = 90; Match(T__2);
					State = 92;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__6) | (1L << T__8) | (1L << NULL) | (1L << MARKER) | (1L << REMOVE) | (1L << NA) | (1L << TRUE) | (1L << FALSE) | (1L << COORD) | (1L << XSTR) | (1L << SYMBOL) | (1L << REF) | (1L << STR) | (1L << URI) | (1L << NUMBER) | (1L << DATE) | (1L << TIME) | (1L << DATETIME))) != 0)) {
						{
						State = 91; val();
						}
					}

					}
					}
					State = 98;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 99; Match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValContext : ParserRuleContext {
		public ScalarContext scalar() {
			return GetRuleContext<ScalarContext>(0);
		}
		public ListContext list() {
			return GetRuleContext<ListContext>(0);
		}
		public DictContext dict() {
			return GetRuleContext<DictContext>(0);
		}
		public NestedgridContext nestedgrid() {
			return GetRuleContext<NestedgridContext>(0);
		}
		public ValContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_val; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.EnterVal(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.ExitVal(this);
		}
	}

	[RuleVersion(0)]
	public ValContext val() {
		ValContext _localctx = new ValContext(Context, State);
		EnterRule(_localctx, 22, RULE_val);
		try {
			State = 107;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NULL:
			case MARKER:
			case REMOVE:
			case NA:
			case TRUE:
			case FALSE:
			case COORD:
			case XSTR:
			case SYMBOL:
			case REF:
			case STR:
			case URI:
			case NUMBER:
			case DATE:
			case TIME:
			case DATETIME:
				EnterOuterAlt(_localctx, 1);
				{
				State = 103; scalar();
				}
				break;
			case T__4:
				EnterOuterAlt(_localctx, 2);
				{
				State = 104; list();
				}
				break;
			case T__6:
				EnterOuterAlt(_localctx, 3);
				{
				State = 105; dict();
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 4);
				{
				State = 106; nestedgrid();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ListContext : ParserRuleContext {
		public ValContext[] val() {
			return GetRuleContexts<ValContext>();
		}
		public ValContext val(int i) {
			return GetRuleContext<ValContext>(i);
		}
		public ListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.EnterList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.ExitList(this);
		}
	}

	[RuleVersion(0)]
	public ListContext list() {
		ListContext _localctx = new ListContext(Context, State);
		EnterRule(_localctx, 24, RULE_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109; Match(T__4);
			State = 115;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__6) | (1L << T__8) | (1L << NULL) | (1L << MARKER) | (1L << REMOVE) | (1L << NA) | (1L << TRUE) | (1L << FALSE) | (1L << COORD) | (1L << XSTR) | (1L << SYMBOL) | (1L << REF) | (1L << STR) | (1L << URI) | (1L << NUMBER) | (1L << DATE) | (1L << TIME) | (1L << DATETIME))) != 0)) {
				{
				{
				State = 110; val();
				State = 111; Match(T__2);
				}
				}
				State = 117;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 118; Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DictContext : ParserRuleContext {
		public TagsCommaOkContext tagsCommaOk() {
			return GetRuleContext<TagsCommaOkContext>(0);
		}
		public DictContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dict; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.EnterDict(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.ExitDict(this);
		}
	}

	[RuleVersion(0)]
	public DictContext dict() {
		DictContext _localctx = new DictContext(Context, State);
		EnterRule(_localctx, 26, RULE_dict);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120; Match(T__6);
			State = 121; tagsCommaOk();
			State = 122; Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NestedgridContext : ParserRuleContext {
		public GridContext grid() {
			return GetRuleContext<GridContext>(0);
		}
		public NestedgridContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nestedgrid; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.EnterNestedgrid(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.ExitNestedgrid(this);
		}
	}

	[RuleVersion(0)]
	public NestedgridContext nestedgrid() {
		NestedgridContext _localctx = new NestedgridContext(Context, State);
		EnterRule(_localctx, 28, RULE_nestedgrid);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124; Match(T__8);
			State = 125; grid();
			State = 126; Match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ScalarContext : ParserRuleContext {
		public ITerminalNode NULL() { return GetToken(ZincParser.NULL, 0); }
		public ITerminalNode MARKER() { return GetToken(ZincParser.MARKER, 0); }
		public ITerminalNode REMOVE() { return GetToken(ZincParser.REMOVE, 0); }
		public ITerminalNode NA() { return GetToken(ZincParser.NA, 0); }
		public BoolContext @bool() {
			return GetRuleContext<BoolContext>(0);
		}
		public ITerminalNode REF() { return GetToken(ZincParser.REF, 0); }
		public ITerminalNode SYMBOL() { return GetToken(ZincParser.SYMBOL, 0); }
		public ITerminalNode STR() { return GetToken(ZincParser.STR, 0); }
		public ITerminalNode URI() { return GetToken(ZincParser.URI, 0); }
		public ITerminalNode NUMBER() { return GetToken(ZincParser.NUMBER, 0); }
		public ITerminalNode DATE() { return GetToken(ZincParser.DATE, 0); }
		public ITerminalNode TIME() { return GetToken(ZincParser.TIME, 0); }
		public ITerminalNode DATETIME() { return GetToken(ZincParser.DATETIME, 0); }
		public ITerminalNode COORD() { return GetToken(ZincParser.COORD, 0); }
		public ITerminalNode XSTR() { return GetToken(ZincParser.XSTR, 0); }
		public ScalarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scalar; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.EnterScalar(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZincListener typedListener = listener as IZincListener;
			if (typedListener != null) typedListener.ExitScalar(this);
		}
	}
